# parprog

./: .clangd  .gitignore  README.md  asan.supp  run.sh
flags/: CMakeLists.txt
lab1/: CMakeLists.txt  config.hpp  main.py  multi.cpp  single.cpp
lab2/: CMakeLists.txt  main.c
lab2/tp/: CMakeLists.txt
task1/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt  main.cpp
task3/: CMakeLists.txt  main.c  main.py
task4/: CMakeLists.txt  config.h  pipe.c  thread.c
